--- a/src/Home.css
+++ b/src/Home.css
@@ -2,18 +2,55 @@ body {
    
     max-height: 100vh;
     width: 100%;
-    background-color:#0075c8;
+    background-color:#cad2d9;
 }
 
 .whitediv{
-    height: 380px;
-    background-color: white;
+    min-height: 380px;
+    background-color: #404040;
+    border-radius: 6px;
+
 }
 
 .spacer{
     height: 20vh;
 }
 
+.logoimage{
+    width: 60%;
+}
+
+.label{
+    color:white;
+    font-size:13px;
+}
+
+.form-control{
+    height: 25px;
+    margin-top: 10px;
+}
+
+.googlediv{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    background: #222;
+    color: #fff;
+    width: 80%;
+    align-items: center;
+
+}
+
+.rap{
+    width: 45%;
+}
+.mycheck{
+    transform: scale(2); 
+}
+
+.checkspan{
+    font-size:14px;
+}
 @media only screen and (max-width: 768px) {
     /* For mobile phones: */
     img{
