--- a/src/Home.css
+++ b/src/Home.css
@@ -6,7 +6,7 @@ body {
 }
 
 .whitediv{
-    min-height: 380px;
+    min-height: 300px;
     background-color: #404040;
     border-radius: 6px;
 
@@ -17,7 +17,7 @@ body {
 }
 
 .logoimage{
-    width: 60%;
+    width: 40%;
 }
 
 .label{
@@ -26,7 +26,7 @@ body {
 }
 
 .form-control{
-    height: 25px;
+    height: 28px;
     margin-top: 10px;
 }
 
@@ -50,6 +50,12 @@ body {
 
 .checkspan{
     font-size:14px;
+}
+
+.info{
+    text-align: center;
+    font-size: 10px;
+    color:rgb(87, 87, 87);
 }
 @media only screen and (max-width: 768px) {
     /* For mobile phones: */
