--- a/src/Home.css
+++ b/src/Home.css
@@ -2,13 +2,16 @@ body {
    
     max-height: 100vh;
     width: 100%;
-    background-color:#cad2d9;
+    background-color:#275e2e;
 }
 
 .whitediv{
-    min-height: 270px;
-    background-color: #404040;
-    border-radius: 6px;
+    min-height: 430px;
+    background-color: lightgrey;
+    border-radius: 15px;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 10px;
 
 }
 
@@ -17,7 +20,7 @@ body {
 }
 
 .logoimage{
-    width: 20%;
+    width: 60%;
 }
 
 .label{
@@ -26,7 +29,7 @@ body {
 }
 
 .form-control{
-    height: 28px;
+    height: 32px;
     margin-top: 10px;
 }
 
@@ -57,8 +60,38 @@ body {
     font-size: 10px;
     color:rgb(87, 87, 87);
 }
+
+.mainhead{
+    background-color: #2a6432;
+    color:white;
+    padding:8px 12px;
+    font-size:26px;
+    border-top-right-radius: 15px;
+    border-top-left-radius: 15px;
+    
+
+}
+
+
+.checktext{
+    font-size:13px;
+}
+
+.mybtnn{
+    background-color: #2a6432;
+    color:white;
+}
+
+
 @media only screen and (max-width: 768px) {
     /* For mobile phones: */
+
+    body {
+   
+        max-height: 100vh;
+        padding:30px;
+        background-color:#275e2e;
+    }
     img{
         width:70%;
         text-align: center;
