--- a/src/Home.css
+++ b/src/Home.css
@@ -2,7 +2,7 @@ body {
    
     max-height: 100vh;
     width: 100%;
-    background-color:#0075c8;
+    background-color:#4d4d4d;
 }
 
 .whitediv{
@@ -11,7 +11,47 @@ body {
 }
 
 .spacer{
-    height: 20vh;
+    height: 5vh;
+}
+
+.toggle-container {
+    display: inline-block;
+}
+
+.toggle-slider {
+    position: relative;
+    display: inline-block;
+    width: 35px;
+    height: 18px;
+    background-color: #ccc;
+    border-radius: 20px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.toggle-slider:before {
+    content: "";
+    position: absolute;
+    width: 18px;
+    height: 18px;
+    background-color: white;
+    border-radius: 50%;
+    left: 2px;
+    top: 50%;
+    transform: translateY(-50%);
+    transition: transform 0.3s;
+}
+.mycheck {
+    opacity: 0;
+    position: absolute;
+}
+
+input:checked + .toggle-slider {
+    background-color: #2196F3; /* Toggle active color */
+}
+
+input:checked + .toggle-slider:before {
+    transform: translateX(20px);
 }
 
 @media only screen and (max-width: 768px) {
